--- a/scss/_medidas.scss
+++ b/scss/_medidas.scss
@@ -5,7 +5,7 @@
   @media screen and (max-width: 767px) {
     padding: 0.313rem 0.625rem 0.313rem 0.625rem;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     height: 70px;
     padding: 0.313rem 0.625rem 0.313rem 0.625rem;
   }
@@ -18,8 +18,8 @@
     width: 80px;
     margin-left: 5px;
   }
-  @media screen and (min-width:380px) and (max-width: 450px) {
-    width: 70px;
+  @media screen and (min-width: 380px) and (max-width: 450px) {
+    width: 75px;
     margin-left: 0;
   }
 }
@@ -29,7 +29,7 @@
     padding-right: 4rem !important;
     padding-left: 4rem !important;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     margin-left: 5px;
     margin-right: 5px;
     padding-right: 2rem !important;
@@ -44,7 +44,7 @@
     width: 42px;
     height: 15px;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     width: 36px;
     height: 17px;
   }
@@ -67,7 +67,7 @@
   @media screen and (max-width: 767px) {
     margin: 0.125rem 0.625rem;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     margin: 2px;
   }
 }
@@ -79,7 +79,7 @@
     padding: 40px 30px;
   }
 
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     padding: 20px 0;
   }
 }
@@ -93,7 +93,7 @@
 
 .parrafo-tiare {
   margin-bottom: 15px;
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     padding-right: 5px;
     padding-left: 0;
   }
@@ -111,7 +111,7 @@
     justify-content: center;
     align-items: center;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     max-width: 83%;
     margin-left: 34px;
     margin-right: 0;
@@ -123,7 +123,7 @@
   @media screen and (max-width: 767px) {
     margin: 0;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     margin: 20px 34px;
   }
 }
@@ -138,7 +138,7 @@
   @media screen and (max-width: 767px) {
     width: 130px;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     height: 40px;
     width: 110px;
     margin-bottom: 0;
@@ -151,7 +151,7 @@
   @media screen and (max-width: 767px) {
     padding: 10px 0 40px 0;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     padding-bottom: 25px;
   }
 }
@@ -161,7 +161,7 @@
   @media screen and (max-width: 767px) {
     padding-top: 0;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     margin-bottom: 0;
     padding-bottom: 5px;
   }
@@ -174,7 +174,7 @@
     padding-right: 20px;
     margin-bottom: 5px;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     margin: 0 34px 5px 34px;
   }
 }
@@ -189,7 +189,7 @@
   @media screen and (max-width: 767px) {
     width: 322px;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     width: 312px;
     padding: 6px 20px 4px 20px;
   }
@@ -231,9 +231,9 @@
     margin-bottom: 0;
     width: 49%;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     width: 53%;
- }
+  }
 }
 
 .subtitulo-servicio {
@@ -251,7 +251,7 @@
     padding-right: 25%;
     padding-bottom: 10px;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     margin-top: 10px;
     padding-left: 23%;
     padding-right: 23%;
@@ -261,7 +261,7 @@
 
 .titulo-empresa {
   padding-top: 20px;
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     margin-bottom: 10px;
     padding-top: 10px;
   }
@@ -275,7 +275,7 @@
 }
 
 .textos-nuestra-empresa {
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     padding: 10px 0 10px 0;
   }
 }
@@ -303,7 +303,7 @@
     justify-content: center;
     align-items: center;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     max-width: 100%;
     margin-bottom: 20px;
   }
@@ -320,7 +320,7 @@
   @media screen and (max-width: 767px) {
     padding: 45px 20px;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     height: 340px;
     padding: 35px 10px 20px 10px;
   }
@@ -331,7 +331,7 @@
   @media screen and (max-width: 767px) {
     margin-bottom: 1.875rem;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     margin: 0.625rem 0 0.313rem 0.625rem;
   }
 }
@@ -346,7 +346,7 @@
     margin-left: 40px;
     margin-right: 40px;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     margin-left: 20px;
     margin-right: 20px;
   }
@@ -357,7 +357,7 @@
   @media screen and (max-width: 767px) {
     margin-left: 42%;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     margin-left: 48%;
   }
 }
@@ -368,7 +368,7 @@
   @media screen and (max-width: 767px) {
     margin-bottom: 10px;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     margin-top: 25px;
   }
 }
@@ -380,14 +380,14 @@
   @media screen and (max-width: 767px) {
     padding: 4.375rem 1.25rem 4.375rem 1.25rem;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     padding: 60px 20px;
     min-width: 380px;
   }
 }
 
 .formulario__contactanos {
-  width: 70%;
+  width: 75%;
   height: auto;
   padding: 1.25rem 3.75rem 1.25rem 3.75rem;
   border-radius: 10px;
@@ -400,7 +400,7 @@
 
 .titulo_contactanos {
   padding: 1.25rem 0 0.625rem 0;
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     padding: 0.625rem 0 0.625rem 0;
   }
 }
@@ -443,7 +443,7 @@ input[type="checkbox"]:checked {
 
 .btn__dos {
   padding: 0.625rem 0.625rem 1.25rem 0;
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     padding: 10px 10px 20px 0;
   }
 }
@@ -454,10 +454,10 @@ input[type="checkbox"]:checked {
   padding: 0.313rem;
   margin: 0 1.25rem 0 1.25rem;
   border-radius: 10px;
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     height: 45px;
     width: 98%;
-   padding: 0;
+    padding: 0;
     margin: 0 12px 0 16px;
   }
 }
@@ -468,10 +468,10 @@ input[type="checkbox"]:checked {
   margin: 0 1.25rem 0 1.25rem;
   padding: 0.313rem;
   border-radius: 10px;
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     margin: 0 20px 0 20px;
     width: 95%;
-    padding: 5px;
+    padding: 5px 3px;
   }
 }
 
@@ -482,7 +482,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     padding: 4.375rem 1.875rem 4.375rem 1.875rem;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     padding: 60px 20px;
     min-width: 380px;
   }
@@ -493,7 +493,7 @@ input[type="checkbox"]:checked {
   padding: 1.25rem 0.625rem 1.25rem 0.625rem;
   border-radius: 10px;
 
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     width: 100%;
   }
 }
@@ -505,17 +505,17 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     padding: 1.25rem 1.25rem 0 1.25rem;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     padding: 1.25rem 1.563rem 0 1.563rem;
   }
 }
 
 .texto_cotizacion {
-  padding: 0 0.625rem 0 0.625rem;
+  padding: 0 20px 0 20px;
   @media screen and (max-width: 767px) {
-    padding: 0 20px 5px 20px;
+    padding: 0 35px 5px 35px;
   }
-  @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     padding: 0 20px 0 20px;
   }
 }
@@ -529,9 +529,8 @@ input[type="checkbox"]:checked {
     margin-bottom: 0;
     margin-right: 0;
     padding: 0 12px 10px 0;
-
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     margin: 0;
     padding: 0 12px 10px 0;
   }
@@ -542,7 +541,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin: 0 0.375rem 0 1.25rem;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     margin: 15px 5px 5px 12px;
   }
 }
@@ -553,7 +552,7 @@ input[type="checkbox"]:checked {
     margin-right: 0;
     margin-bottom: 0;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     margin-right: 0;
   }
 }
@@ -563,7 +562,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin: 0 0.313rem 1.25rem 0.625rem;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     margin: 0 5px 10px 12px;
   }
 }
@@ -573,11 +572,11 @@ input[type="checkbox"]:checked {
   margin-right: 0.625rem;
   @media screen and (max-width: 767px) {
     margin-top: 1.25rem;
-    margin-right: 0.813rem;
+    margin-right: 0.92rem;
     margin-left: 0;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
-    margin: 1.25rem 0.813rem 0.313rem 0;
+  @media screen and (min-width: 380px) and (max-width: 450px) {
+    margin: 1.25rem 0.92rem 0.313rem 0;
   }
 }
 
@@ -593,7 +592,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     width: 132px;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     width: 132px;
   }
 }
@@ -604,7 +603,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     padding-top: 0;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     padding-bottom: 0.625rem;
     padding-top: 0;
   }
@@ -616,7 +615,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin-left: 0.625rem;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     margin-left: 0.625rem;
   }
 }
@@ -626,7 +625,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin-left: 0.563rem;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     margin-left: 0.563rem;
   }
 }
@@ -636,7 +635,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin-left: 0.5rem;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     margin-left: 0.5rem;
     margin-bottom: 5px;
   }
@@ -652,7 +651,7 @@ input[type="checkbox"]:checked {
     width: 141px;
     margin: 0.313rem 0 0.625rem 0.625rem;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     width: 138px;
     margin: 0.313rem 0 0.625rem 0.625rem;
   }
@@ -668,7 +667,7 @@ input[type="checkbox"]:checked {
     width: 122px;
     margin: 0.313rem 0 0.625rem 0.625rem;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     width: 122px;
     margin: 0.313rem 0 0.625rem 0.625rem;
   }
@@ -684,7 +683,7 @@ input[type="checkbox"]:checked {
     width: 106px;
     margin: 0.313rem 0 0.625rem 0.625rem;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     width: 106px;
     margin: 0.313rem 0 0.625rem 0.625rem;
   }
@@ -696,7 +695,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     padding: 0.625rem 0 0.625rem 0;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     padding: 0 20px;
   }
 }
@@ -709,7 +708,7 @@ input[type="checkbox"]:checked {
     width: 90px;
     margin: 0 0.625rem 0.625rem 0.625rem;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     width: 100%;
     margin: 0 0 10px 0;
   }
@@ -724,7 +723,7 @@ input[type="checkbox"]:checked {
     width: 90px;
     margin: 0 0.625rem 0.625rem 0;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     width: 100%;
     margin: 0 0.625rem 0.625rem 0;
   }
@@ -740,7 +739,7 @@ input[type="checkbox"]:checked {
     margin-left: 0.5rem;
     margin-bottom: 0.625rem;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     width: 100%;
     height: 43px;
     margin-left: 0;
@@ -753,7 +752,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin: 0.625rem 0 0.625rem 1.563rem;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     margin: 0.625rem 0 0.625rem 1.188rem;
   }
 }
@@ -765,7 +764,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin: 0.625rem 0.638rem 0.625rem 0;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     margin: 0.625rem 0.938rem 0.625rem 0;
   }
 }
@@ -775,7 +774,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin: 1.25rem 1.938rem 1.25rem 1.563rem;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     margin: 1.25rem 0.125rem 1.25rem 0.125rem;
   }
 }
@@ -789,7 +788,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     padding: 4.375rem 1.25rem 4.375rem 1.25rem;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     padding: 60px 20px;
     min-width: 380px;
   }
@@ -805,21 +804,21 @@ input[type="checkbox"]:checked {
     width: 95%;
     padding: 1.25rem 1.875rem 1.25rem 1.875rem;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     width: 100%;
   }
 }
 
 .titulo_reservar {
-  padding: 1.25rem 0 0.625rem 0;
+  padding: 1.25rem 0 0.938rem 0;
 }
 
 .texto_reservar_dos {
-  padding-top: 1.875rem;
+  padding-top: 2.5rem;
 }
 
 .formulario__label__dos {
-  padding: 0.938rem 0 0.125rem 0;
+  padding: 0.75rem 0 0.125rem 0;
 }
 
 .formulario__input__dos {
@@ -844,8 +843,8 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     padding: 1.875rem 0.438rem 1.25rem 0;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
-    padding: 1.875rem 1.25rem 0.625rem 0;
+  @media screen and (min-width: 380px) and (max-width: 450px) {
+    padding: 1.875rem 0 0.625rem 0;
   }
 }
 
@@ -858,8 +857,11 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin: 0 1.063rem 0 1.063rem;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     height: 40px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
   }
 }
 
@@ -872,8 +874,10 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin: 0 1.063rem 0 1.125rem;
   }
- @media screen and (min-width:380px) and (max-width: 450px) {
+  @media screen and (min-width: 380px) and (max-width: 450px) {
     height: 40px;
-    margin-bottom: 0.625rem;
+    width: 100%;
+    margin: 0 0 0.625rem 0;
+    padding: 0;
   }
 }
