se ajusta boton contacto

--- a/css/style.css
+++ b/css/style.css
@@ -679,6 +679,7 @@ body {
 @media screen and (max-width: 767px) {
   .button-uno {
     width: 130px;
+    padding: 12px 0;
   }
 }
 @media screen and (min-width: 380px) and (max-width: 450px) {
@@ -686,6 +687,7 @@ body {
     height: 40px;
     width: 120px;
     margin-bottom: 0;
+    padding: 10px 0;
   }
 }
 
