--- a/css/style.css
+++ b/css/style.css
@@ -748,6 +748,7 @@ body {
 @media screen and (max-width: 767px) {
   .button-dos {
     width: 322px;
+    padding: 8px 20px 5px 20px;
   }
 }
 @media screen and (min-width: 380px) and (max-width: 450px) {
