--- a/scss/_medidas.scss
+++ b/scss/_medidas.scss
@@ -190,6 +190,7 @@
   margin-bottom: 5px;
   @media screen and (max-width: 767px) {
     width: 322px;
+    padding: 8px 20px 5px 20px;
   }
   @media screen and (min-width: 380px) and (max-width: 450px) {
     width: 312px;
