--- a/scss/_medidas.scss
+++ b/scss/_medidas.scss
@@ -114,7 +114,6 @@
   @media screen and (min-width: 380px) and (max-width: 450px) {
     max-width: 83%;
     margin-left: 34px;
-    margin-right: 0;
   }
 }
 
@@ -124,7 +123,7 @@
     margin: 0;
   }
   @media screen and (min-width: 380px) and (max-width: 450px) {
-    margin: 20px 34px;
+    margin: 20px 34px 10px 34px;
   }
 }
 
