--- a/scss/_colores.scss
+++ b/scss/_colores.scss
@@ -20,6 +20,10 @@ $base-error: #bb2929;
   background-color: $basePrimaria-color;
 }
 
+.logo {
+  color: $baseSecundaria-color;
+}
+
 .button-uno,
 .button-dos {
   background-color: $basePrimaria-color;
