--- a/scss/_fuentes.scss
+++ b/scss/_fuentes.scss
@@ -16,6 +16,17 @@ body {
   font-family: "Raleway", sans-serif;
 }
 
+.logo {
+  font-family: "Kalam", cursive;
+  font-size: 40px;
+  @media screen and (max-width: 767px) {
+    font-size: 35px;
+  }
+  @media screen and (min-width: 380px) and (max-width: 450px) {
+    font-size: 28px;
+  }
+}
+
 .navbar-toggler {
   font-size: 12px;
 }
