--- a/css/style.css
+++ b/css/style.css
@@ -540,6 +540,11 @@ body {
   padding-top: 0rem !important;
   padding-bottom: 1rem !important;
 }
+@media screen and (max-width: 767px) {
+  .py-3 {
+    padding-top: 1rem !important;
+  }
+}
 
 @media screen and (max-width: 767px) {
   .px-5 {
