se agrega animación a botón cotizar

--- a/css/style.css
+++ b/css/style.css
@@ -2209,6 +2209,10 @@ body {
   color: #fff;
 }
 
+.button-dos:hover {
+  transform: scale(1.1);
+}
+
 .button-uno,
 .button-dos {
   background-color: #000000;
