--- a/scss/_colores.scss
+++ b/scss/_colores.scss
@@ -28,6 +28,10 @@ $base-error: #bb2929;
   color: $baseSecundaria-color;
 }
 
+.button-dos:hover {
+  transform: scale(1.1);
+}
+
 .button-uno,
 .button-dos {
   background-color: $basePrimaria-color;
