--- a/css/style.css
+++ b/css/style.css
@@ -598,7 +598,7 @@ body {
 }
 @media screen and (max-width: 767px) {
   .nav-link {
-    margin: 0.125rem 0.625rem 0.125rem 0;
+    margin: 0.125rem 0 0.125rem 0;
   }
 }
 @media screen and (min-width: 380px) and (max-width: 450px) {
