--- a/scss/_medidas.scss
+++ b/scss/_medidas.scss
@@ -71,7 +71,7 @@
 .nav-link {
   margin-top: 20px;
   @media screen and (max-width: 767px) {
-    margin: 0.125rem 0.625rem 0.125rem 0;
+    margin: 0.125rem 0 0.125rem 0;
   }
   @media screen and (min-width: 380px) and (max-width: 450px) {
     margin: 2px;
